# testingBasalt

./: CMakeLists.txt  README.md  branchApp-1.0.0-Linux.rpm  install.sh
client/: CMakeLists.txt  install.sh
client/include/: common.h
client/src/: common.cpp  main.cpp
lib/: CMakeLists.txt  getBranch.cpp  getBranch.h  getBranch_interface.cpp  getBranch_interface.h  install.sh  main.cpp  test
lib/include/: getBranch.h
lib/src/: getBranch.cpp
